# SWTG118AS

./: LICENSE  README.md  Registers.md  registers.md  sfp_compat.md
tools/: FM25Q16A_SS.pas  calcsum.py  encuid.py  switchup.py
tools/encuid2/: CMakeLists.txt  encuid2.c  swtg_nonsense.patch
